🐛 Fix body y overflow and container make it desktop width

--- a/assets/styles/base/index.scss
+++ b/assets/styles/base/index.scss
@@ -5,7 +5,7 @@
 
 body {
   font-family: var(--fnt-main);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
